# chasquimq

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODOS.md  dist-workspace.toml
.github/cross-shim-tests/: package-lock.json  package.json  producer.py  producer.ts  worker.py  worker.ts
.github/workflows/: ci.yml  cross-shim.yml  node-ci.yml  py-ci.yml  release.yml
benchmarks/: README.md  baseline-bullmq.md  chasquimq-phase1.md  chasquimq-phase2-final.md  chasquimq-phase2-slice2.md  observability-slice5.md  observability.md  phase4-bench-guard.md  post-phase4-fixups.md
chasquimq/: Cargo.toml
chasquimq-bench/: Cargo.toml
chasquimq-bench/src/: cli.rs  cpu.rs  main.rs  report.rs  runner.rs  sample.rs  stats.rs
chasquimq-bench/src/scenarios/: mod.rs  preload.rs  queue_add.rs  queue_add_bulk.rs  queue_add_delayed.rs  worker_concurrent.rs  worker_delayed_end_to_end.rs  worker_generic.rs  worker_retry_throughput.rs
chasquimq-cli/: Cargo.toml  README.md
chasquimq-cli/src/: dlq.rs  events.rs  inspect.rs  main.rs  repeatable.rs  watch.rs
chasquimq-metrics/: Cargo.toml
chasquimq-metrics/examples/: facade_sink.rs  prometheus_sink.rs
chasquimq-metrics/src/: facade.rs  labeled.rs  lib.rs
chasquimq-metrics/tests/: queue_labeled.rs
chasquimq-node/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
chasquimq-node/__test__/: cancel-delayed.test.ts  dlq.test.ts  native.test.ts  queue-events.test.ts  queue.test.ts  repeatable.test.ts  retry-overrides.test.ts  smoke.test.ts  worker.test.ts
chasquimq-node/npm/darwin-arm64/: package.json
chasquimq-node/npm/darwin-x64/: package.json
chasquimq-node/npm/linux-arm64-gnu/: package.json
chasquimq-node/npm/linux-x64-gnu/: package.json
chasquimq-node/npm/win32-x64-msvc/: package.json
chasquimq-node/src/: consumer.rs  lib.rs  payload.rs  producer.rs  promoter.rs  repeat.rs  scheduler.rs
chasquimq-node/src-ts/: encoding.ts  errors.ts  index.ts  job.ts  queue-events.ts  queue.ts  types.ts  worker.ts
chasquimq-py/: Cargo.toml  README.md  build.rs  pyproject.toml
chasquimq-py/src-rs/: consumer.rs  job.rs  lib.rs  payload.rs  producer.rs  scheduler.rs
chasquimq-py/src/chasquimq/: __init__.py  _encoding.py  _native.pyi  errors.py  job.py  queue.py  queue_events.py  repeat.py  worker.py
chasquimq-py/tests/: conftest.py  test_consumer.py  test_high_level.py  test_producer.py  test_smoke.py
chasquimq/examples/: standalone_promoter.rs
chasquimq/src/: ack.rs  config.rs  consumer.rs  error.rs  events.rs  job.rs  lib.rs  metrics.rs  producer.rs  promoter.rs  repeat.rs  scheduler.rs
chasquimq/src/consumer/: dlq.rs  mod.rs  reader.rs  retry.rs  worker.rs
chasquimq/src/metrics/: dispatch.rs  mod.rs  testing.rs
chasquimq/src/producer/: dlq.rs  mod.rs
chasquimq/src/redis/: commands.rs  conn.rs  delayed_member.rs  group.rs  keys.rs  mod.rs  parse.rs
chasquimq/tests/: consumer.rs  delayed.rs  delayed_cancel.rs  delayed_idempotent.rs  dlq.rs  dlq_replay.rs  events_stream.rs  fred_smoke.rs  name_delayed.rs  name_on_wire.rs  observability.rs  observability_lifecycle.rs  observability_promoter.rs  observability_reader_dlq.rs  per_job_retry.rs  producer.rs  repeatable.rs  retry.rs  shutdown.rs  unrecoverable.rs
chasquimq/tests/common/: mod.rs
docs/: name-on-wire-design.md  phase3-napi-design.md  phase4-pyo3-design.md
prd/: prd.md
spike/: Cargo.toml
spike/src/: main.rs
