[workspace]
members = ["chasquimq", "chasquimq-bench", "chasquimq-metrics", "chasquimq-node", "chasquimq-py"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/jotarios/chasquimq"
rust-version = "1.85"

[profile.release]
lto = "thin"
codegen-units = 1
