[workspace]
members = ["chasquimq", "chasquimq-bench", "chasquimq-cli", "chasquimq-metrics", "chasquimq-node", "chasquimq-py"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/jotarios/chasquimq"
rust-version = "1.85"

[profile.release]
lto = "thin"
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
