[package]
name = "chasquimq-bench"
version = "0.1.0"
description = "Benchmark harness for ChasquiMQ, mirroring bullmq-bench."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
chasquimq = { path = "../chasquimq" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
humantime = "2"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
