[package]
name = "chasquimq-bench"
version = "0.1.0"
description = "Benchmark harness for ChasquiMQ, mirroring bullmq-bench."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
chasquimq = { path = "../chasquimq" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
clap = { version = "4", features = ["derive"] }
fred = { version = "10", features = ["i-streams"] }
humantime = "2"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
