[package]
name = "chasquimq-node"
version = "0.1.0"
description = "Node.js NAPI-RS bindings for the chasquimq message broker."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi9", "async", "tokio_rt", "serde-json"] }
napi-derive = "2"
chasquimq = { path = "../chasquimq" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
rmp-serde = "1"
thiserror = "1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
