[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "chasquimq"
version = "0.1.0"
description = "The fastest open-source message broker for Redis."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Jorge Rios", email = "j29.rios@gmail.com" }]
requires-python = ">=3.9"
keywords = ["redis", "queue", "job-queue", "message-broker", "messagepack", "streams", "pyo3"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "msgpack>=1.0",
]

[project.optional-dependencies]
dev = [
    "maturin>=1.7,<2.0",
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/jotarios/chasquimq"
Repository = "https://github.com/jotarios/chasquimq"
Issues = "https://github.com/jotarios/chasquimq/issues"

[tool.maturin]
module-name = "chasquimq._native"
python-source = "src"
features = ["pyo3/extension-module"]
manifest-path = "Cargo.toml"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
