[package]
name = "chasquimq"
version = "0.1.0"
description = "The fastest open-source message broker for Redis."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
tokio-util = { version = "0.7", features = ["rt"] }
fred = { version = "10", features = ["i-streams"] }
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
ulid = "1"
uuid = { version = "1", features = ["v4"] }
bytes = "1"
thiserror = "1"
tracing = "0.1"
async-channel = "2"
futures-util = "0.3"
croner = "3.0.1"
# `chrono` is only used for cron next-fire computation (via `croner`'s
# `find_next_occurrence`); keep features minimal.
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
