[package]
name = "chasquimq"
version = "0.1.0"
description = "The fastest open-source message broker for Redis."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
tokio-util = { version = "0.7", features = ["rt"] }
fred = { version = "10", features = ["i-streams"] }
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
ulid = "1"
uuid = { version = "1", features = ["v4"] }
bytes = "1"
thiserror = "1"
tracing = "0.1"
async-channel = "2"
futures-util = "0.3"
croner = "3.0.1"
# `chrono` is only used for cron next-fire computation (via `croner`'s
# `find_next_occurrence`); keep features minimal.
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# `chrono-tz` powers IANA timezone resolution (e.g. `America/New_York`) for
# repeatable cron specs. `default-features = false` drops `serde` and
# `case-insensitive` lookups — we don't need either; we only call
# `<str>::parse::<chrono_tz::Tz>()`. Enabled out of the box because every
# cron user with a city-named tz needs it.
chrono-tz = { version = "0.10", default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
